Update package.json remove --no-lint

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "webpack-merge": "^5.7.3"
   },
   "scripts": {
-    "build": "webpack --mode=production --config webpack.config.build.js --no-lint",
+    "build": "webpack --mode=production --config webpack.config.build.js",
     "build:dev": "webpack --mode=development --config webpack.config.build.js",
     "test": "jest",
     "start": "webpack serve --open --config webpack.config.dev-server.js"
