Update vercel.json try with folder: public

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "builds": [
-    { "src": "src/index.html", "use": "@vercel/static" }
-  ],
-  "outputDirectory": "vercel/output"
+  "outputDirectory": "public",  // Use the correct output directory (or 'vercel/output')
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" }
+  ]
 }
