--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "outputDirectory": "public",  // Use the correct output directory (or 'vercel/output')
+  "outputDirectory": "public",
   "rewrites": [
     { "source": "/", "destination": "/index.html" }
   ]
