--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "outputDirectory": "public",
+  "builds": [
+    { "src": "public/**/*", "use": "@vercel/static" }
+  ],
   "rewrites": [
     { "source": "/", "destination": "/index.html" }
   ]
