--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
   "builds": [
-    { "src": "public/**/*", "use": "@vercel/static" }
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
+    }
   ],
-  "rewrites": [
-    { "source": "/", "destination": "/index.html" }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/public/index.html"
+    }
   ]
 }
