--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
   "builds": [
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
-    }
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/public/index.html"
-    }
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" }
   ]
 }
