--- a/vercel.json
+++ b/vercel.json
@@ -5,4 +5,9 @@
   "rewrites": [
     { "source": "/", "destination": "/index.html" }
   ]
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" }
+  ]
 }
