Update vercel.json no cache

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
   ]
   "cleanUrls": true,
   "trailingSlash": false,
+  "cache": false,
   "rewrites": [
     { "source": "/", "destination": "/index.html" }
   ]
