--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
-  "builds": [
-    { "src": "public/**/*", "use": "@vercel/static" }
-  ],
-  "rewrites": [
-    { "source": "/", "destination": "/index.html" }
-  ]
-  "cleanUrls": true,
-  "trailingSlash": false,
+  "cache": false,
+  "outputDirectory": "public",
   "rewrites": [
     { "source": "/", "destination": "/index.html" }
   ]
