--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "outputDirectory": "public",
+  "outputDirectory": "lib",
   "rewrites": [
     { "source": "/", "destination": "/index.html" }
   ]
